<resources>
    <string name="app_name">Motivational Quotes</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_author">Author</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorites">Favourite</string>
    <string name="title_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_notification">Get notified when our best articles go viral</string>
    <string name="head_notification">Stay Informed</string>
    <string name="share_using">Share</string>
    <string name="notification">Notification</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="share_our_app">Share our App</string>
    <string name="rate_us">Rate us</string>
    <string name="contact_us">Contact us</string>
    <string name="share_desc"><![CDATA[Share our app with your Friend & Family]]></string>
    <string name="text_quoteDay">Quotes of the Day</string>
    <string name="texr_quote_desc">Get all the Latest Quotes of the Day</string>
    <string name="text_notification_desc">Get notified when our best articles go viral</string>
    <string name="text_login_desc">Login with us to see what people are sharing</string>
    <string name="text_rate_desc">Rate us for the best user experience</string>
    <string name="text_contact_desc">Contact us if you have any query</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_comment">Comment</string>
    <string name="btn_submit">Submit</string>
    <string name="text_facebook">Connect to Facebook</string>
    <string name="text_google">Connect to Google</string>
    <string name="text_fav">No Quote have marked Favourite yet!</string>


    <!--Explore more categories array list -->
    <string-array name="explore_list">
        <item>Alone</item>
        <item>Happiness</item>
        <item>Love</item>
        <item>Life</item>
        <item>Anniversary</item>

        <item>Birthday</item>
        <item>Emotional</item>
        <item>Romantic</item>
        <item>Success</item>
        <item>Friends</item>

        <item>Christmas</item>
        <item>Morning</item>
        <item>Night</item>
        <item>Heart Touching</item>
        <item>Marriage</item>

        <item>Relationship</item>
        <item>Husband Wife</item>
        <item>Funny</item>
        <item>Tired</item>
    </string-array>


    <string name="no_internet_title">Network Problem</string>
    <string name="no_internet_message">No Internet Connection Found. \nPlease Check Your Internet Connection . . .</string>
    <string name="no_internet_positive_text">Try Again</string>
    <string name="no_internet_negative_text">Quit</string>
    <string name="NO_INTERNET_DIALOG">no_internet_dialog</string>
    <string name="bar_explore_more">Explore More</string>
    <string name="bar_favourite">Favourite</string>
    <string name="bar_setting">Setting</string>
    <string name="toast_sending">Sending Your Mail...</string>
    <string name="toast_correct_option">Please choose correct option</string>

    <string name="long_shortcut">long test</string>
    <string name="short_shorcut">test</string>
    <string name="sharing_text">Integrating your goals into your digital life is an easy way to keep your goals top of mind and help keep you motivated, Download the app and stay motivate</string>
</resources>
