<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_author"
        android:icon="@drawable/author_icon"
        android:title="@string/title_author" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/navigation_search"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/navigation_favourite"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/navigation_setting"
        android:title="@string/title_setting" />

</menu>
